# macroquest

./: .cvsignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Changes.txt  Hi there.txt  ISXEQ-VS2005.sln  ISXEQ.sln  ISXEQClient.h  MQ2-API.chm  MQ2.natvis  MQ2Plugin.h  MQ2PluginDevelopment.html  MacroQuest2-VS2010.sln  MacroQuest2-VS2012.sln  MacroQuest2.ncb  MacroQuest2.sln  Plugin.Debug.ISXEQ.props  Plugin.Debug.props  Plugin.Release.ISXEQ.props  Plugin.Release.props  README.md  WindowsBuildReadMe.txt  batch-convert.ps1  custom_plugins.json  extra.mak  gen_solution.ps1  global.mak  macroquest2.dsw  makefile  makezip.bat  moveitem.h  moveitem2.h  plugins.cmake  readme.chm  zipit.lst
Blech/: Blech.h  test.cpp  test2.cpp  test3.cpp  test4.cpp
Detours/: Detours from Microsoft.url
ISXEQ/: PostBuild.bat  isxGamesCommon.props
ISXEQ Release Files/: README!.txt
ISXEQ.NET/: ISXEQ.NET.csproj  ISXEQ.cs
ISXEQLegacy/: ISXEQLegacy-VS2005.vcproj  ISXEQLegacy.cpp  ISXEQLegacy.h  ISXEQLegacy.vcproj  ISXEQLegacy.vcxproj  ISXEQLegacy.vcxproj.filters  ISXEQLegacyEngine.cpp  ISXEQLegacyEngine.h  LegacyGlobals.cpp
MQ2AutoLogin/: ISXEQAutoLogin.cpp  ISXEQAutoLogin.h  ISXEQAutoLogin.vcproj  MQ2AutoLogin.cpp  MQ2AutoLogin.dep  MQ2AutoLogin.dsp  MQ2AutoLogin.mak  MQ2AutoLogin.vcproj  MQ2AutoLogin.vcxproj
MQ2Bzsrch/: .cvsignore  MQ2Bzsrch.cpp  MQ2Bzsrch.dsp  MQ2Bzsrch.vcproj  MQ2Bzsrch.vcxproj  MQ2Bzsrch.vcxproj.filters  makefile  netstream.cpp  netstream.h
MQ2Chat/: .cvsignore  ISXEQChat-VS2005.vcproj  ISXEQChat.cpp  ISXEQChat.h  ISXEQChat.vcproj  ISXEQChat.vcxproj  ISXEQChat.vcxproj.filters  MQ2Chat.cpp  MQ2Chat.dep  MQ2Chat.dsp  MQ2Chat.mak  MQ2Chat.ncb  MQ2Chat.vcproj  MQ2Chat.vcxproj  MQ2Chat.vcxproj.filters  makefile
MQ2ChatWnd/: .cvsignore  ISXEQChatWnd-VS2005.vcproj  ISXEQChatWnd.cpp  ISXEQChatWnd.h  ISXEQChatWnd.vcproj  ISXEQChatWnd.vcxproj  ISXEQChatWnd.vcxproj.filters  MQ2ChatWnd.cpp  MQ2ChatWnd.dep  MQ2ChatWnd.dsp  MQ2ChatWnd.mak  MQ2ChatWnd.vcproj  MQ2ChatWnd.vcxproj  MQ2ChatWnd.vcxproj.filters  makefile
MQ2CustomBinds/: .cvsignore  ISXEQCustomBinds-VS2005.vcproj  ISXEQCustomBinds.cpp  ISXEQCustomBinds.h  ISXEQCustomBinds.vcproj  ISXEQCustomBinds.vcxproj  ISXEQCustomBinds.vcxproj.filters  MQ2CustomBinds.cpp  MQ2CustomBinds.dep  MQ2CustomBinds.dsp  MQ2CustomBinds.mak  MQ2CustomBinds.vcproj  MQ2CustomBinds.vcxproj  MQ2CustomBinds.vcxproj.filters  makefile
MQ2EQBugFix/: .cvsignore  MQ2EQBugFix.cpp  MQ2EQBugFix.dep  MQ2EQBugFix.dsp  MQ2EQBugFix.mak  MQ2EQBugFix.vcproj  MQ2EQBugFix.vcxproj  MQ2EQBugFix.vcxproj.filters  makefile
MQ2EQIM/: .cvsignore  ISXEQEQIM-VS2005.vcproj  ISXEQEQIM.cpp  ISXEQEQIM.h  ISXEQEQIM.vcproj  ISXEQEQIM.vcxproj  ISXEQEQIM.vcxproj.filters  MQ2EQIM.cpp  MQ2EQIM.dep  MQ2EQIM.dsp  MQ2EQIM.mak  MQ2EQIM.vcproj  MQ2EQIM.vcxproj  MQ2EQIM.vcxproj.filters  makefile
MQ2Ext/: MQ2Ext.vcproj  WDbgExts.h  exts.c  exts2.cpp  makefile  mqext.c  mqext.def  mqext.h  mqext.rc  resource.h  test.cpp
MQ2FPS/: MQ2FPS.cpp  MQ2FPS.dep  MQ2FPS.dsp  MQ2FPS.h  MQ2FPS.mak  MQ2FPS.vcproj  makefile
MQ2HUD/: .cvsignore  MQ2HUD.cpp  MQ2HUD.dep  MQ2HUD.dsp  MQ2HUD.mak  MQ2HUD.vcproj  MQ2HUD.vcxproj  MQ2HUD.vcxproj.filters  makefile
MQ2Irc/: .cvsignore  MQ2Irc.cpp  MQ2Irc.dep  MQ2Irc.dsp  MQ2Irc.mak  MQ2Irc.vcproj  MQ2Irc.vcxproj  MQ2Irc.vcxproj.filters  makefile
MQ2ItemDisplay/: .cvsignore  ISXEQItemDisplay-VS2005.vcproj  ISXEQItemDisplay.cpp  ISXEQItemDisplay.h  ISXEQItemDisplay.vcproj  ISXEQItemDisplay.vcxproj  ISXEQItemDisplay.vcxproj.filters  MQ2ItemDisplay.cpp  MQ2ItemDisplay.dep  MQ2ItemDisplay.dsp  MQ2ItemDisplay.mak  MQ2ItemDisplay.rc  MQ2ItemDisplay.vcproj  MQ2ItemDisplay.vcxproj  MQ2ItemDisplay.vcxproj.filters  MQUI_CompareTipWnd.xml  makefile
MQ2Labels/: .cvsignore  ISXEQLabels-VS2005.vcproj  ISXEQLabels.cpp  ISXEQLabels.h  ISXEQLabels.vcproj  ISXEQLabels.vcxproj  ISXEQLabels.vcxproj.filters  MQ2Labels.cpp  MQ2Labels.dep  MQ2Labels.dsp  MQ2Labels.mak  MQ2Labels.vcproj  MQ2Labels.vcxproj  MQ2Labels.vcxproj.filters  makefile
MQ2Main/: .cvsignore  ArrayClass.h  DataTypeList.h  DebugHandler.h  EQClasses.cpp  EQClasses.h  EQData(Test).h  EQData(beta).h  EQData.h  EQUIStructs(Test).h  EQUIStructs(beta).h  EQUIStructs.h  EqData(beta).h  ISXEQ-VS2005.vcproj  ISXEQ.cpp  ISXEQ.h  ISXEQ.vcproj  ISXEQ.vcxproj  ISXEQ.vcxproj.filters  MQ2Auth.cpp  MQ2Benchmarks.cpp  MQ2ChatAPI.cpp  MQ2ChatHook.cpp  MQ2CleanUI.cpp  MQ2CommandAPI.cpp  MQ2Commands.cpp  MQ2Commands.h  MQ2DInput.cpp  MQ2Data.cpp  MQ2DataAPI.cpp  MQ2DataTypes.cpp  MQ2DataTypes.h  MQ2DataVars.cpp  MQ2DetourAPI.cpp  MQ2Globals-private.cpp  MQ2Globals-private.h  MQ2Globals-private_default.cpp  MQ2Globals-private_default.h  MQ2Globals.cpp  MQ2Globals.h  (+43 more)
MQ2Map/: .cvsignore  ISXEQMap-VS2005.vcproj  ISXEQMap.cpp  ISXEQMap.h  ISXEQMap.vcproj  ISXEQMap.vcxproj  ISXEQMap.vcxproj.filters  ISXEQMapCommands.cpp  MQ2Map.cpp  MQ2Map.dep  MQ2Map.dsp  MQ2Map.h  MQ2Map.mak  MQ2Map.vcproj  MQ2Map.vcxproj  MQ2Map.vcxproj.filters  MQ2MapAPI.cpp  MQ2MapCommands.cpp  makefile
MQ2MoveUtils/: makefile
MQ2Pizza/: MQ2Pizza.cpp  MQ2Pizza.vcxproj  MQ2Pizza.vcxproj.filters
MQ2TargetInfo/: LocalDB.h  MQ2TargetInfo.cpp  MQ2TargetInfo.ini  MQ2TargetInfo.rc  MQ2TargetInfo.vcxproj
MQ2Telnet/: ISXEQTelnet.vcxproj  ISXEQTelnet.vcxproj.filters  MQ2Telnet.cpp  MQ2Telnet.vcxproj  Telnet.h  TelnetServer.cpp  TelnetServer.h  WinTelnet.h
MQ2Template/: ISXEQTemplate-VS2005.vcproj  ISXEQTemplate.cpp  ISXEQTemplate.h  ISXEQTemplate.vcproj  ISXEQTemplate.vcxproj  ISXEQTemplate.vcxproj.filters  MQ2Plugin.h  MQ2Template.cpp  MQ2Template.dep  MQ2Template.dsp  MQ2Template.mak  MQ2Template.vcproj  MQ2Template.vcxproj  MQ2Template.vcxproj.filters  ReadMe.txt  makefile  stdafx.cpp
MacroQuest/: MacroQuest.cpp  MacroQuest.dep  MacroQuest.dsp  MacroQuest.mak  MacroQuest.rc  MacroQuest.vcproj  makefile  resource.h
Release/: .cvsignore  Changes-ISXEQ.txt  Changes.txt  Custom.ini  ItemDB.txt  MacroQuest.ini  MacroQuest_default.ini  bmpwad8.s3d  eqgame.ini  locations.txt  mq2telnet.ini  (+1 more)
(+1444 files in other folders)
